--- a/Sol_BookManagement/Frontend/ui/src/Modules/Books/ViewsComponents/css/MainPage.css
+++ b/Sol_BookManagement/Frontend/ui/src/Modules/Books/ViewsComponents/css/MainPage.css
@@ -15,3 +15,14 @@ span.bmp-title{
 .bmp-dialog-width{
   width: 90vw;
 }
+
+.bmp-toast-width{
+  width: 25vw;
+}
+
+@media only screen and (max-width: 576px) {
+  .bmp-toast-width{
+    width: 70vw;
+  }
+}
+
