--- a/Sol_BookManagement/Frontend/ui/src/Modules/Books/ViewsComponents/css/MainPage.css
+++ b/Sol_BookManagement/Frontend/ui/src/Modules/Books/ViewsComponents/css/MainPage.css
@@ -20,6 +20,10 @@ span.bmp-title{
   width: 25vw;
 }
 
+/* .bmp-yes-no-button-width{
+  width: 200px !important;
+} */
+
 @media only screen and (max-width: 576px) {
   .bmp-toast-width{
     width: 70vw;
